--- a/BlazorClient/Pages/Index.razor
+++ b/BlazorClient/Pages/Index.razor
@@ -1,11 +1,50 @@
 ﻿@page "/"
+@using System.BLL.Models.UserManagement
+@using BlazorClient.Services.UserManagement
+@inject IUserService UserService
 
-<h1>Hello, world!</h1>
+@* <h1>Hello, world!</h1> *@
+@* *@
+@* <div class="alert alert-warning" role="alert"> *@
+@*     Before authentication will function correctly, you must configure your provider details in <code>Program.cs</code> *@
+@* </div> *@
+@* *@
+@* Welcome to your new app. *@
+@* *@
+@* <SurveyPrompt Title="How is Blazor working for you?"/> *@
 
-<div class="alert alert-warning" role="alert">
-    Before authentication will function correctly, you must configure your provider details in <code>Program.cs</code>
+<div class="card mt-4">
+    <h4 class="card-header">You're logged in with Blazor WebAssembly & JWT!!</h4>
+    <div class="card-body">
+        <h6>Users from secure api end point</h6>
+        @if (loading)
+        {
+            <div class="spinner-border spinner-border-sm"></div>
+        }
+        @if (users != null)
+        {
+            <ul>
+                @foreach (var user in users)
+                {
+                    <li>@user.Name @user.Surname</li>
+                }
+            </ul>
+        }
+        else
+        {
+            <div class="">Bruh</div>
+        }
+    </div>
 </div>
 
-Welcome to your new app.
+@code {
+    private bool loading;
+    private IEnumerable<UserModel> users;
 
-<SurveyPrompt Title="How is Blazor working for you?"/>
+    protected override async Task OnInitializedAsync()
+    {
+        loading = true;
+        users = await UserService.GetAllAsync();
+        loading = false;
+    }
+}
