--- a/BlazorClient/Shared/MainLayout.razor
+++ b/BlazorClient/Shared/MainLayout.razor
@@ -1,18 +1,38 @@
-﻿@inherits LayoutComponentBase
+﻿@* @inherits LayoutComponentBase *@
+@* *@
+@* <div class="page"> *@
+@*     <div class="sidebar"> *@
+@*         <NavMenu/> *@
+@*     </div> *@
+@* *@
+@*     <div class="main"> *@
+@*         <div class="top-row px-4 auth"> *@
+@*             <LoginDisplay/> *@
+@*             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a> *@
+@*         </div> *@
+@* *@
+@*         <div class="content px-4"> *@
+@*             @Body *@
+@*         </div> *@
+@*     </div> *@
+@* </div> *@
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
+@using BlazorClient.Services.AuthenticationManagement
+@inherits LayoutComponentBase
+@inject IAuthenticationService AuthenticationService
+@inject NavigationManager NavigationManager
 
-    <div class="main">
-        <div class="top-row px-4 auth">
-            <LoginDisplay/>
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+@if (AuthenticationService.User != null)
+{
+    <!-- nav -->
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <div class="navbar-nav">
+            <NavLink href="" Match="NavLinkMatch.All" class="nav-item nav-link">Home</NavLink>
+            <NavLink href="logout" class="nav-item nav-link">Logout</NavLink>
         </div>
+    </nav>
+}
 
-        <div class="content px-4">
-            @Body
-        </div>
-    </div>
+<div class="container">
+    @Body
 </div>
