--- a/BlazorClient/_Imports.razor
+++ b/BlazorClient/_Imports.razor
@@ -8,5 +8,9 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorClient
+@using BlazorClient.Helpers
+@using BlazorClient.Models
+@using BlazorClient.Models.Account
+@using BlazorClient.Services
 @using BlazorClient.Shared
 @using AntDesign
