--- a/BlazorClient/Shared/AlertCustom.razor
+++ b/BlazorClient/Shared/AlertCustom.razor
@@ -100,7 +100,7 @@
     {
         if (alert == null) return null;
 
-        var classes = new List<string> { "alert", "alert-dismissable", "mt-4", "container" };
+        var classes = new List<string> { "alert", "alert-dismissable", "mt-4", "container", "fixed-top" };
 
         var alertTypeClass = new Dictionary<AlertType, string>();
         alertTypeClass[AlertType.Success] = "alert-success";
