--- a/BlazorClient/Pages/Account/Layout.razor
+++ b/BlazorClient/Pages/Account/Layout.razor
@@ -4,7 +4,7 @@
 @inject IAccountService AccountService
 @inject NavigationManager NavigationManager
 
-<div class="col-md-6 offset-md-3 mt-5">
+<div class="app">
     @Body
 </div>
 
