--- a/BlazorClient/Pages/Account/Login.razor.css
+++ b/BlazorClient/Pages/Account/Login.razor.css
@@ -1,4 +1,4 @@
-a.ant-btn.register-button {
+.register-button {
     line-height: inherit; !important;
-    padding-top: 0; !important;
+    padding-top: 4px; !important;
 }
