add datagrid to display users

--- a/BlazorClient/Pages/Index.razor
+++ b/BlazorClient/Pages/Index.razor
@@ -8,7 +8,7 @@
 <div class="p-4">
     <div class="container">
         <h1>Hi @AccountService.User.Name!</h1>
-        <p>You're logged in with Blazor WebAssembly!!</p>
+        <p>You're logged in</p>
         <p><NavLink href="users">Manage Users</NavLink></p>
     </div>
 </div>
