--- a/BlazorClient/_Imports.razor
+++ b/BlazorClient/_Imports.razor
@@ -13,5 +13,5 @@
 @using BlazorClient.Models.Account
 @using BlazorClient.Services
 @using BlazorClient.Shared
-@using Blazorise
-@using Blazorise.DataGrid
+
+@using BlazorFluentUI
