Create new page for users

--- a/BlazorClient/Shared/MainLayout.razor
+++ b/BlazorClient/Shared/MainLayout.razor
@@ -33,11 +33,9 @@
                 <NavLink href="" Match="NavLinkMatch.All" class="nav-item nav-link" ><b>IT_Club</b></NavLink>
             </div>
             <div class="nav-menu">
-                <NavLink href="users" class="nav-item nav-link">Список пользователей</NavLink>
-                <NavLink href="#" class="nav-item nav-link">Список учащихся</NavLink>
+                <NavLink href="users" class="nav-item nav-link">Список чедбиков</NavLink>
                 <NavLink href="#" class="nav-item nav-link">Cписок групп</NavLink>
                 <NavLink href="#" class="nav-item nav-link">Оплата</NavLink>
-                <NavLink href="#" class="nav-item nav-link">Личный кабинет</NavLink>
                 <NavLink href="account/logout" class="nav-item nav-link">Выход</NavLink>
                 <div class="user-profile">
                     <NavLink href="#" class="nav-item nav-link">
