--- a/BlazorClient/Pages/Users/About.razor.css
+++ b/BlazorClient/Pages/Users/About.razor.css
@@ -6,34 +6,20 @@
 .info {
     max-width: 100%;
     padding: 30px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Параметры тени */
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
     padding: 10px;
     border-radius: 3px;
-}
-.param {
-    color: black;
-    margin-bottom: 30px;
-}
-.ans {
-    margin-bottom: 30px;
-    padding-left:100px;
+    background-color: white;
 }
 .photo-card {
     padding: 30px;
     margin-right: 15px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Параметры тени */
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
     padding: 10px;
-    border-radius:3px;
-}
-.card-title{
-    margin-top:15px;
-}
-.tables{
-    display:flex;
+    border-radius: 3px;
+    background-color: white;
+    display:table;
 }
 .Name{
-    margin-left:10px;
-}
-.secondTable{
     margin-left:10px;
 }
