--- a/BlazorClient/Pages/Users/Index.razor
+++ b/BlazorClient/Pages/Users/Index.razor
@@ -2,11 +2,19 @@
 @using Microsoft.AspNetCore.Authorization
 @using BlazorClient.Services.AccountManagement
 @using System.BLL.Models.UserManagement
+
 @attribute [Authorize]
 @inject IAccountService AccountService
+
+
+
+
+
+
+<div class="table">
     <h1>Users</h1>
-    <NavLink href="user/add" class="btn btn-sm btn-success mb-2">Add User</NavLink>
-<table class="table">
+    <NavLink href="users/add" class="btn btn-sm btn-success mb-2">Add User</NavLink>
+
     <DataGrid TItem="UserModel"
               Data="@users"
               TotalItems="@totalCount"
@@ -18,10 +26,12 @@
                     <Button Color="Color.Danger" Clicked="@context.Clicked">Delete</Button>
                 </DeleteCommandTemplate>
             </DataGridCommandColumn>
-            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.UserName)" Caption="Username" />
-            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Name)" Caption="First Name" />
-            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Surname)" Caption="Last Name" />
-            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Email)" Caption="Email" />
+            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.UserName)" Caption="Имя пользователя" />
+            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Name)" Caption="Имя" />
+            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Surname)" Caption="Фамилия" />
+            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Surname)" Caption="Отчество" />
+            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.BirthDay)" Caption="Дата рождения" />
+            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Email)" Caption="Емеил" />
 
             <DataGridColumn TItem="UserModel" Field="@nameof( UserModel.Id)" Sortable="false" Filterable="false">
                 <DisplayTemplate>
@@ -32,7 +42,9 @@
             </DataGridColumn>
         </DataGridColumns>
     </DataGrid>
-</table>
+</div>
+
+
 @code {
     private bool loading;
     private IList<UserModel> users;
