--- a/BlazorClient/Shared/MainLayout.razor.css
+++ b/BlazorClient/Shared/MainLayout.razor.css
@@ -1,3 +1,4 @@
+
 .page {
     position: relative;
     display: flex;
@@ -11,25 +12,6 @@
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
-
-/*.left.nav-menu.nav-item.nav-link::before {
-    content: '';
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    width: 0%;
-    height: 2px;
-    background-color: #000;
-    transition: 0.2s;
-}
-
-.left.nav-menu.nav-item.nav-link:hover:before {
-    width: 100%;
-    left: 0;
-}*/
-
-
-
 
 .top-row {
     background-color: #f7f7f7;
@@ -79,6 +61,15 @@
         display:flex;
         padding-left:300px;
         align-items:center;
+    }
+
+    .shadow {
+          box-shadow: 0 .5rem 1rem rgba(0,0,0,.05)!important;
+          border:0.25px solid #D7D8D9;
+    }
+
+    .sider{
+        display:flex;
     }
 
 @media (max-width: 640.98px) {
