--- a/BlazorClient/Pages/Users/Index.razor
+++ b/BlazorClient/Pages/Users/Index.razor
@@ -12,7 +12,6 @@
 
 
 <div class="table">
-    <h1>Users</h1>
     <NavLink href="users/add" class="btn btn-sm btn-success mb-2">Add User</NavLink>
 
     <DataGrid TItem="UserModel"
@@ -29,7 +28,7 @@
             <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.UserName)" Caption="Имя пользователя" />
             <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Name)" Caption="Имя" />
             <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Surname)" Caption="Фамилия" />
-            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Surname)" Caption="Отчество" />
+            <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.MiddleName)" Caption="Отчество" />
             <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.BirthDay)" Caption="Дата рождения" />
             <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Email)" Caption="Емеил" />
 
