--- a/BlazorClient/Shared/MainLayout.razor
+++ b/BlazorClient/Shared/MainLayout.razor
@@ -32,19 +32,13 @@
 
         <BarBrand Style="border:none;">
             <div class="home">
-                <BarDropdown>
-                    <BarDropdownToggle><b>It_Club</b></BarDropdownToggle>
-                    <BarDropdownMenu>
-                        <BarDropdownItem>Action</BarDropdownItem>
-                        <BarDropdownItem>Another action</BarDropdownItem>
-                    </BarDropdownMenu>
-                </BarDropdown>
+                <b>It_Club</b>
             </div>
         </BarBrand>
-        <BarMenu>
-            <BarStart>
+        <BarMenu >
+            <BarStart Style="font-size:170%">
 
-                <BarItem>
+                <BarItem Style="margin-left:82px">
                     <BarLink To="users">Список челбосо</BarLink>
                 </BarItem>
 
@@ -62,7 +56,7 @@
 
                 <BarItem Style="float:right">
 
-                    <BarLink To="#">
+                    <BarLink To="/users/{id:int}">
                         <img class="user-image" src="/assets/images/User (1).svg" />
                         @($"{AccountService.User.Name} {AccountService.User.Surname} ")
                     </BarLink>
@@ -78,45 +72,38 @@
     <Sidebar @ref="sidebar">
         <SidebarContent>
             <SidebarBrand>
-                <a href="">Blazorise Sidebar</a>
+                <a href="">Список групп</a>
             </SidebarBrand>
             <SidebarNavigation>
-                <SidebarLabel>Main</SidebarLabel>
                 <SidebarItem>
-                    <SidebarLink To="" Title="Home">
-                        <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight" />Home
+                    <SidebarLink To="" Title="Дворец">
+                        <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight" />Дворец
                     </SidebarLink>
                 </SidebarItem>
                 <SidebarItem>
-                    <SidebarLink Toggled="(isOpen)=> mailSidebarSubItems.Toggle(isOpen)" IsShow="true">
-                        <Icon Name="IconName.Mail" Margin="Margin.Is3.FromRight" />Email
+                    <SidebarLink To="" Title="Серебронск">
+                        <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight" />Серебронск
                     </SidebarLink>
-                    <SidebarSubItem @ref="mailSidebarSubItems" IsShow="true">
-                        <SidebarItem>
-                            <SidebarLink To="email/inbox">Inbox</SidebarLink>
-                        </SidebarItem>
-                        <SidebarItem>
-                            <SidebarLink To="email/compose">Compose Email</SidebarLink>
-                        </SidebarItem>
-                        @* other subitems *@
-                    </SidebarSubItem>
                 </SidebarItem>
                 <SidebarItem>
-                    <SidebarLink Toggled="(isOpen)=> appsSidebarSubItems.Toggle(isOpen)" IsShow="true">
-                        <Icon Name="IconName.Smartphone" Margin="Margin.Is3.FromRight" />Apps
+                    <SidebarLink To="" Title="Двойное чикаго">
+                        <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight" />Двойное чикаго
                     </SidebarLink>
-                    <SidebarSubItem @ref="appsSidebarSubItems" IsShow="true">
-                        <SidebarItem>
-                            <SidebarLink To="apps/todo">Todo List</SidebarLink>
-                        </SidebarItem>
-                    </SidebarSubItem>
                 </SidebarItem>
+                <SidebarItem>
+                    <SidebarLink To="" Title="Серебронск">
+                        <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight" />Серебронск
+                    </SidebarLink>
+                </SidebarItem>
+
             </SidebarNavigation>
         </SidebarContent>
     </Sidebar>
 
-    <AlertCustom />
+    <AlertCustom/>
+
     @Body
+
 </div>
     <!--Sidebar-->
 
