--- a/BlazorClient/wwwroot/css/app.css
+++ b/BlazorClient/wwwroot/css/app.css
@@ -1,5 +1,7 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -11,6 +13,14 @@ a, .btn-link {
 #app {
     height: 100vh;
     background-color: #F0F0F0;
+}
+
+.loader {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn-primary {
@@ -74,10 +84,9 @@ a, .btn-link {
     margin-top: 5px;
 }
 .spinner {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background-color: #333;
-    margin: 100px auto;
     -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
     animation: sk-rotateplane 1.2s infinite ease-in-out;
 }
