--- a/BlazorClient/Shared/MainLayout.razor.css
+++ b/BlazorClient/Shared/MainLayout.razor.css
@@ -11,7 +11,6 @@
 
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-    background-color: gainsboro;
 }
 
 .top-row {
@@ -87,6 +86,7 @@ body .navbar-expand {
 
     .sider{
         display:flex;
+          background-color: #eeeeee;
     }
 
 @media (max-width: 640.98px) {
